Changelog
=========

2.1 (unreleased)
----------------

- Added option for setting the ID of the Carousel.
  [yomatters]

2.0 (2010-11-19)
----------------

- Split plugin into functions, making it easier to override parts of the
  Carousel behavior.
  [yomatters]

2.0b1 (2010-09-30)
------------------

- Added slide as a possible transition type.
  [yomatters]

- Refactored javascript as a jQuery plugin that triggers jQuery events on
  transitions.
  [yomatters]

- Added settings to customize the appearance of the banner and pager and the
  length and type of transition.
  [yomatters]

- Added an optional pager for navigation among banners.
  [yomatters]
  
- Replaced description field on Carousel banners with a rich-text body field.   
  [yomatters]

- Remove the browser layer to help with use in Plone 2.5.
  [davisagli]

1.1 (2010-03-26)
----------------

- In Plone 4, add viewlet to the abovecontent viewlet manager by default, to
  avoid weird styles.
  [davisagli]

- Added Spanish translation.
  [tzicatl]

- Only show published banners in the Carousel, even for users who have
  permission to see others.
  [davisagli]

1.0 (2009-03-31)
----------------

- Changed behavior of text links to swap banner on mouseover.
  [davisagli]


1.0b3 (2009-02-07)
------------------

- Add 'Carousel Banner' to types not searched.
  [davisagli]

- Locate carousel folder correctly on containers used as default pages
  (e.g. a Topic)
  [davisagli]

- Apply proper security declarations to the getSize and tag methods of the
  banner type so that the view works okay when customized TTW.
  [davisagli]

- Only display the carousel on default view; not any of the other tabs.
  [davisagli]

- Fix viewlet removal on uninstallation.
  [davisagli]

- Fix duplicate entries in quick installer.
  [davisagli]


1.0b2 (2009-02-04)
------------------

- Declare dependency of our custom GS import step on the viewlets step.
  [davisagli]
