@@ -37,3 +37,6 @@
 .carousel-pager-item-classic {
     cursor: pointer;
 }
+.carousel-settings-introduction {
+    margin-bottom: 1em;
+}
