@@ -1,0 +1,33 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="here/main_template/macros/master"
+      i18n:domain="Products.Carousel">
+<body>
+
+    <metal:main fill-slot="main">
+        <metal:main-macro define-macro="main">
+            <h1 class="documentFirstHeading" tal:content="view/label">Title</h1>
+            <div class="carousel-settings-introduction" i18n:translate="">
+                Carousel allows you to create a rotating display of banners that
+                contain images and text.
+                <ul i18n:name="carousel-actions">
+                    <li i18n:translate="">
+                        To add a banner, use the Add New menu above.
+                    </li>
+                    <li i18n:translate="">
+                        To modify existing banners,
+                        <a i18n:name="click-contents"
+                            tal:attributes="href string:${context/absolute_url}/folder_contents;"
+                            href=""><tal:span i18n:translate="">click the Contents tab</tal:span></a>.
+                    </li>
+                </ul>
+            </div>
+            <div id="content-core" tal:content="structure view/contents" />
+        </metal:main-macro>
+    </metal:main>
+
+</body>
+</html>
